Added, CustomWebSocketConfiguration to allow retrive httpservlet objects from websocket connections Added, AutomaticRenderServlet provide a unified renderer to default jsp's Added, SecurityQuestionServlet to serve as "entrypoint" where will be verified the security question and security answer and take the appropriated action Added, SecurityAnswerServlet to implement doPost aiming verify the correct answer Added, Many classes related to websocket connection structure Added, jsp's pages Adjustment, web.xml welcome file lists now have SecurityQuestionServlet as main "entrypoint"

--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -10,6 +10,6 @@
         </session-timeout>
     </session-config>
     <welcome-file-list>
-        <welcome-file></welcome-file>
+        <welcome-file>talk/private/secure/chat</welcome-file>
     </welcome-file-list>
 </web-app>
